--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   gatus:
-    image: docker.io/twinproduction/gatus:v5.7.0
+    image: docker.io/twinproduction/gatus:latest
     restart: unless-stopped
     container_name: gatus
     user: '999:999'
